Fixed graph entities listing ocupying 100% height event when collapsed

--- a/app/styles/main.css.less
+++ b/app/styles/main.css.less
@@ -224,9 +224,10 @@
 
 .graph-tools {
   position: absolute;
-  top: 10px;
-  bottom: 10px;
-  left: 10px;
+  top: 0;
+  left: 0;
+  padding: 10px 0 10px 10px;
+  max-height: 100%;
   display: flex;
   display: -webkit-flex;
   flex-direction: column;
